# mgauss

./: .gitignore  README  make_beam.py  mgauss.py  pyproject.toml
mgauss/: cli.py  fit.py
mgauss_fit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
